Bug 244557 - Folder-view widget icon do not scales properly on the vertical panel
Summary: Folder-view widget icon do not scales properly on the vertical panel
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-folderview (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-14 01:57 UTC by Uri
Modified: 2012-02-10 20:33 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Uri 2010-07-14 01:57:08 UTC
Version:           unspecified (using KDE 4.4.4) 
OS:                Linux

Folder-view widget icon do not scales properly on the vertical panel

Reproducible: Always

Steps to Reproduce:
Add folder-view widget on the vertical panel

Actual Results:  
Ugly view and space waste

Expected Results:  
The icon of folder view should have a size the same like the other widgets, for example kde-menu or device notifier
Comment 1 Janet 2010-09-05 16:26:16 UTC
Does it scale ok in KDE 4.5 when you increase the panel's size? In 4.5 you can set the maximum size of the panel icons in systemsettings. See Bug 193756.
Comment 2 Uri 2010-09-06 10:57:45 UTC
Sorry, can confirm this bug for 4.5, because it is not currently a part of Debian.
Comment 3 Reza 2011-12-27 12:55:31 UTC
Could you reproduce this in latest 4.7 series or 4.8RC or trunk if possible?
Comment 4 Ignat Semenov 2012-02-05 17:01:03 UTC
Can you confirm this in 4.8?

Also, I do not quite understand what you mean by "does not scale properly on vertical panels". Could you provide a screenshot please?
Comment 5 Ignat Semenov 2012-02-10 20:32:16 UTC
Git commit 89208d71a9b0a3692ddec5218144beeafd7844e3 by Ignat Semenov.
Committed on 10/02/2012 at 21:23.
Pushed by isemenov into branch 'master'.

do not scale the folderview icon when in panel

1)Keep the folderview panel icon size constant independent of the panel height / width.
2)Update icon size on panel icon size change using KGlobalSettings.
3)Check for m_iconWidget in the panle branch of constraintsEvent() to avoid creating duplicates / ghost entries on constraintEvent().
FIXED-IN:4.8.1
REVIEW:103915

M  +25   -5    plasma/applets/folderview/folderview.cpp

http://commits.kde.org/kde-baseapps/89208d71a9b0a3692ddec5218144beeafd7844e3
Comment 6 Ignat Semenov 2012-02-10 20:33:56 UTC
Git commit a8694a6d733f9fc8f1a08256826d65a6bef1720b by Ignat Semenov.
Committed on 10/02/2012 at 21:23.
Pushed by isemenov into branch 'KDE/4.8'.

do not scale the folderview icon when in panel

1)Keep the folderview panel icon size constant independent of the panel height / width.
2)Update icon size on panel icon size change using KGlobalSettings.
3)Check for m_iconWidget in the panle branch of constraintsEvent() to avoid creating duplicates / ghost entries on constraintEvent().
FIXED-IN:4.8.1
REVIEW:103915

M  +25   -5    plasma/applets/folderview/folderview.cpp

http://commits.kde.org/kde-baseapps/a8694a6d733f9fc8f1a08256826d65a6bef1720b