do not scale the folderview icon when in panel

1)Keep the folderview panel icon size constant independent of the panel height / width.
2)Update icon size on panel icon size change using KGlobalSettings.
3)Check for m_iconWidget in the panle branch of constraintsEvent() to avoid creating duplicates / ghost entries on constraintEvent().

BUG:244557
FIXED-IN:4.8.1
REVIEW:103915